<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>farm_navigation</name>
  <version>0.0.0</version>
  <description>Navigation line detector for agricultural robots</description>
  <maintainer email="ced@todo.todo">ced</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>tf2_py</depend>
  <depend>nav2_util</depend>
  <depend>nav2_bringup</depend>
  <depend>opennav_coverage_msgs</depend>
  <depend>opennav_coverage_bt</depend>
  <depend>opennav_coverage</depend>
  <depend>opennav_row_coverage</depend>
  <depend>opennav_coverage_navigator</depend>
  <depend>backported_bt_navigator</depend>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
